dropshot/tests/fail/bad_server_only10.stderr
error: server `MyServer` must not be marked as `unsafe`
 --> tests/fail/bad_server_only10.rs:8:1
  |
8 | unsafe trait MyServer {
  | ^^^^^^

error[E0425]: cannot find function `api_description` in module `my_server`
  --> tests/fail/bad_server_only10.rs:23:16
   |
23 |     my_server::api_description::<MyImpl>();
   |                ^^^^^^^^^^^^^^^ not found in `my_server`

error[E0425]: cannot find function `stub_api_description` in module `my_server`
  --> tests/fail/bad_server_only10.rs:24:16
   |
24 |     my_server::stub_api_description();
   |                ^^^^^^^^^^^^^^^^^^^^ not found in `my_server`
